# PyGT521F32

./: pyproject.toml  requirements.txt  requirements2.txt
GT521F32/: GT521F32.py  __init__.py  packets.py  scsi.py
GT521F32-viewer/: __main__.py  viewer.py
GT521F32/interfaces/: __init__.py  exception.py  scsi_linux.py  scsi_windows.py  serial.py
gt521f32/: __init__.py  gt521f32.py  packets.py
gt521f32/interfaces/: __init__.py  exception.py  scsi_linux.py  scsi_windows.py  serial.py
gt521f32_viewer/: __main__.py  viewer.py
viewer/: __main__.py  viewer.py
