[tool.poetry]
name = "PyGT521F32"
version = "0.1.0"
description = "An SDK module for the ADH-Tech GT521F32 fingerprint scanner"
authors = ["Alon <alonlivne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cython-sgio = "^1.1.2"
pyserial = "^3.4"
Pillow = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
