[tool.poetry]
name = "PyGT521F32"
version = "0.1.5"
description = "An SDK module for the ADH-Tech GT521F32 fingerprint scanner"
authors = ["Alon <alonlivne@gmail.com>"]
packages = [
	{ include = "gt521f32"},
	{ include = "gt521f32_viewer"},
]
	

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.5"
Pillow = "^8.2.0"
cython-sgio = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
